p3/app/service.yml
apiVersion: v1
kind: Service
metadata:
  name: wil42-app-service
spec:
  selector:
    app: wil42-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8888
      nodePort: 30000
  type: NodePort
