p3/app/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wil42-app-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wil42-app-service
            port:
              number: 80
